add new methods to build Feedbacks without answers by another fields

--- a/src/app/components/stops/components/add-feedback/add-feedback.component.css
+++ b/src/app/components/stops/components/add-feedback/add-feedback.component.css
@@ -1,14 +1,10 @@
+.mat-dialog-actions{
+  height: 350px;
+  
+}
 .addfeedback{
-    font-size: 14px;
+    font-size: 16px;
     width: 50%;
-    margin: 150px 400px;
+    margin: 50px 400px;
   }
 
-.mat-raised-button{
-
-    margin: 10%;
-  }
-.mat-form-field {
-     
-      width: 70%;
-  }
