add feedbackCriteria componet with auto edding questions

--- a/src/app/components/feedback-criteria/add-feedback-criteria/add-feedback-criteria.component.css
+++ b/src/app/components/feedback-criteria/add-feedback-criteria/add-feedback-criteria.component.css
@@ -1,12 +1,8 @@
-
-.question{
+.addfeedbackcriteria{
     font-size: 14px;
     width: 50%;
     margin: 150px 400px;
   }
   .mat-elevation-z8{
     width: 100%; 
-  }
-  .mat-raised-button{
-  margin-left: 75%;
   }
