--- a/src/app/components/feedback-criteria/add-question/add-question.component.css
+++ b/src/app/components/feedback-criteria/add-question/add-question.component.css
@@ -1,8 +1,8 @@
-.addquestion{
+.question{
   font-size: 14px;
   width: 50%;
   margin: 150px 400px;
 }
-.mat-elevation-z8{
-  width: 100%; 
+.mat-form-field{
+  width: 67%;
 }
