--- a/src/app/components/feedback-criteria/one-feedback-criteria/one-feedback-criteria.component.css
+++ b/src/app/components/feedback-criteria/one-feedback-criteria/one-feedback-criteria.component.css
@@ -1,4 +1,4 @@
-.onequestion{
+.onefeedbackCriteria{
     font-size: 14px;
     width: 50%;
     margin: 150px 400px;
@@ -10,4 +10,7 @@
   .mat-form-field {
      
       width: 70%;
+  }
+ .mat-card {
+    width: 64%;
   }
