--- a/src/app/components/feedback-criteria/add-feedback-criteria/add-feedback-criteria.component.html
+++ b/src/app/components/feedback-criteria/add-feedback-criteria/add-feedback-criteria.component.html
@@ -1,30 +1,25 @@
 <div class="addfeedbackcriteria">
-    <mat-form-field appearance="outline">
+    <mat-form-field appearance="standard">
         <mat-select placeholder="Type" [(ngModel)]="feedbackCriteria.type" name="type">
-            <mat-option *ngFor="let enumType of enumTypes" [value]="enumType">
+            <mat-option *ngFor="let enumType of enumTypes" [value]="enumType" (click) = "ifRatingType(feedbackCriteria.type)">
               {{ enumType }}
             </mat-option>
           </mat-select>
     </mat-form-field>
-    <mat-form-field appearance="outline">
+    <mat-form-field appearance="standard">
         <mat-label>Weight</mat-label>
-        <input matInput placeholder="weight" [(ngModel)]= "feedbackCriteria.weight" id="weight" name="weight">
-      </mat-form-field>
-      
-      <button mat-raised-button (click)="openDialog()">Add Questions</button>
+        <input [readonly]="isReadOnly" matInput placeholder="weight" [(ngModel)]= "feedbackCriteria.weight" id="weight" name="weight">
+        <mat-hint align="end">You can add weight only to RATING type</mat-hint>
+    </mat-form-field>   
+      <div class="button"> 
+      <button mat-raised-button (click)="openDialog()">Add Questions</button></div>  
       <div class="questionadd" *ngIf="questions">
-<!--      
-          <div *ngFor="let question of questions">
-      
-         
-              <p>{{question.name}}</p>
-            
-            </div>  -->
-            <mat-list role="list" *ngFor="let question of questions">
-
-                <mat-list-item role="listitem">{{question.name}}</mat-list-item>
-            </mat-list>
-            </div>
+        <mat-list *ngFor="let question of questions">
+          <mat-list-item >{{question.name}}</mat-list-item>
+            <mat-divider></mat-divider>
+         </mat-list>
+        
+      </div>
             <button mat-stroked-button (click) = "addFeedbackCriteria()" > SAVE </button>
       
   </div>
