--- a/src/app/components/feedback-criteria/add-question/add-question.component.css
+++ b/src/app/components/feedback-criteria/add-question/add-question.component.css
@@ -1,8 +1,7 @@
-.question{
-  font-size: 14px;
-  width: 50%;
-  margin: 150px 400px;
-}
 .mat-form-field{
-  width: 67%;
+  width: 90%;
+  margin: 0 3%;
+}
+.button{
+  float: right;
 }
