--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -13,4 +13,9 @@
       <button mat-stroked-button type="submit">{{'User' | translate}}</button>
     </a>
   </div>
+  <div class="LoginUser">
+    <a [routerLink]="['/user/login']">
+      <button mat-stroked-button type="submit">{{'Login'| translate}}</button>
+    </a>
+  </div>
 </mat-toolbar>
