--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -50,6 +50,10 @@ a:active {
   position: relative;
   left: 500px;
 }
+.LoginUser {
+  position: relative;
+  left: 650px;
+}
 
 .container {
   position: absolute;
@@ -63,6 +67,7 @@ a:active {
 .lang {
   margin: 0 0 0 8px;
 }
+
 
 
 
