--- a/src/app/components/feedback-criteria/one-feedback-criteria/one-feedback-criteria.component.html
+++ b/src/app/components/feedback-criteria/one-feedback-criteria/one-feedback-criteria.component.html
@@ -1,14 +1,14 @@
 <div *ngIf= "feedbackCriteria" class="onefeedbackCriteria">  
     <mat-card>{{feedbackCriteria.type}}</mat-card>
     <mat-form-field appearance="standard">
-        <mat-label>{{feedbackCriteria.weight}}</mat-label>
-        <input matInput placeholder="weight" [(ngModel)]="feedbackCriteria.weight" >
-        <mat-hint align="end">Weight</mat-hint>
+        <mat-label >{{feedbackCriteria.weight}}</mat-label>
+        <input [readonly]="isReadOnly" matInput placeholder="weight" [(ngModel)]="feedbackCriteria.weight" >
+        <mat-hint align="end">Only RATING can have weight</mat-hint>
       </mat-form-field>
       <mat-form-field appearance="standard" *ngFor="let question of feedbackCriteria.questions" >
             <mat-label>{{question.name}}</mat-label>
             <input matInput placeholder="question" [(ngModel)]="question.name" >
-            <mat-hint align="end">Weight</mat-hint>
+            <mat-hint align="end">question</mat-hint>
           </mat-form-field>
        <button mat-raised-button (click)="openDialog()">Add Questions</button>
     <button mat-raised-button (click) = "updateFeedbackCriteria()"> Update </button>
