--- a/src/app/components/stops/stops-grid.component.html
+++ b/src/app/components/stops/stops-grid.component.html
@@ -1,21 +1,25 @@
 <div class="demo-grid-list">
   <mat-grid-list cols="7" rowHeight="50px">
     <mat-grid-tile
-      *ngFor="let tile of stopsList | async">
-      <input type="checkbox" [id]="tile.id" [name]="tile" [value]="tile.street" aria-labelledby="ariaid">
+      *ngFor="let i=index; let tile of stopsList | async">
+      <input type="checkbox" [(ngModel)]="checkedItems[i]" [id]="tile.id" [name]="tile" [value]="tile.street"
+             aria-labelledby="ariaid"
+             (change)='selectStops()'>
       <div><label id="ariaid">{{tile.street}}</label></div>
     </mat-grid-tile>
   </mat-grid-list>
-  <app-average-rate [id]="idTransit"></app-average-rate>
-  <mat-tab-group>
-    <mat-tab label="By hours">
-      <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
-    </mat-tab>
-    ,
-    <mat-tab label="By stops">
-      <app-busy-stops-diagram [id]="idTransit"></app-busy-stops-diagram>
-    </mat-tab>
-  </mat-tab-group>
-  <app-raiting-diagram [id]="idTransit"></app-raiting-diagram>
+  <!--<app-average-rate [id]="idTransit"></app-average-rate>-->
+  <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
+  <app-busy-stops-diagram [id]="idTransit" [stopList]="selectedStops"></app-busy-stops-diagram>
+  <!--<mat-tab-group>-->
+    <!--<mat-tab label="By hours">-->
+      <!--<app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>-->
+    <!--</mat-tab>-->
+    <!--,-->
+    <!--<mat-tab label="By stops">-->
+      <!--<app-busy-stops-diagram [id]="idTransit" [stopList]="selectedStops"></app-busy-stops-diagram>-->
+    <!--</mat-tab>-->
+  <!--</mat-tab-group>-->
+  <!--<app-raiting-diagram [id]="idTransit"></app-raiting-diagram>-->
 </div>
 
