--- a/src/app/components/transit/components/raiting-diagram/raiting-diagram.component.css
+++ b/src/app/components/transit/components/raiting-diagram/raiting-diagram.component.css
@@ -1,8 +1,7 @@
 .container {
   position: absolute;
-  top: 10%;
-  left: 100px;
-  width: 20%;
-  height: 20%;
+  top: 50px;
+  left: 0px;
+  width: 300px;
   margin: 100px auto;
 }
