--- a/src/app/components/transit/components/raiting-diagram/raiting-diagram.component.html
+++ b/src/app/components/transit/components/raiting-diagram/raiting-diagram.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <p style="text-align: center">{{"Raiting-Diagram" | translate}}</p>
     <canvas id="doughnut"></canvas>
   </div>
 </div>
