--- a/src/app/components/transit/stops-grid.component.css
+++ b/src/app/components/transit/stops-grid.component.css
@@ -1,4 +1,6 @@
 .demo-grid-list {
+  position: relative;
+  top: 50px;
   width: auto;
   margin: 100px 100px;
 }
@@ -35,3 +37,4 @@ mat-tab-group {
   width: 550px;
   height: auto;
 }
+
