--- a/src/app/components/transit/stops-grid.component.html
+++ b/src/app/components/transit/stops-grid.component.html
@@ -1,4 +1,5 @@
 <div class="demo-grid-list">
+  <p style="text-align: center">{{"Route" | translate}}</p>
   <mat-grid-list cols="7" rowHeight="50px">
     <mat-grid-tile
       *ngFor="let i=index; let tile of stopsList | async">
@@ -9,8 +10,8 @@
     </mat-grid-tile>
   </mat-grid-list>
   <app-average-rate [id]="idTransit"></app-average-rate>
+      <app-raiting-diagram [id]="idTransit"></app-raiting-diagram>
       <app-busy-stops-diagram [id]="idTransit"></app-busy-stops-diagram>
       <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
-      <app-raiting-diagram [id]="idTransit"></app-raiting-diagram>
 </div>
 
