--- a/src/app/components/transit/stops-grid.component.html
+++ b/src/app/components/transit/stops-grid.component.html
@@ -14,4 +14,5 @@
       <app-busy-stops-diagram [id]="idTransit"></app-busy-stops-diagram>
       <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
 </div>
+<app-back-to-previous-page-btn></app-back-to-previous-page-btn>
 
