Update css for elements

--- a/src/app/components/non-ex-category/non-ex-category.component.html
+++ b/src/app/components/non-ex-category/non-ex-category.component.html
@@ -12,5 +12,7 @@
       </div>
     </div>
   </div>
-  <app-transits></app-transits>
+  <div class="cityTransits">
+    <app-transits></app-transits>
+  </div>
 </div>
