--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -4,6 +4,7 @@
   left: 100px;
   top: 0;
   height: 100px;
+  width: 1200px;
   background-color: white;
   box-shadow: 1px 5px 6px 2px rgba(217, 214, 217, 1);
 }
@@ -43,16 +44,16 @@ a:active {
 
 .criteriaButton {
   position: relative;
-  left: 400px;
+  left: 250px;
 }
 
 .NewUser {
   position: relative;
-  left: 500px;
+  left: 300px;
 }
 .LoginUser {
   position: relative;
-  left: 650px;
+  left: 350px;
 }
 
 .container {
