--- a/src/app/components/non-ex-category/non-ex-category.component.css
+++ b/src/app/components/non-ex-category/non-ex-category.component.css
@@ -21,9 +21,10 @@
 }
 .non-category-wrapper{
   width: 1100px;
+  height: 50px;
   margin: 150px auto;
 }
-.non-category{
+.non-category {
   display: inline-block;
   width: 210px;
   height: 160px;
@@ -31,7 +32,7 @@
   margin: 0 30px;
   box-shadow: 0px 0px 5px 1px rgba(181,181,181,1);
 }
-.name-and-icon{
+.name-and-icon {
   position: relative;
   height: 140px;
   width: 140px;
