delete refresh token, lint syntax

--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -9,7 +9,7 @@
         <textarea matInput [(ngModel)]="login.password" placeholder="Password" name="password"></textarea>
       </mat-form-field>
 
-      <button class="Button" mat-fab (click)="logIn">Login</button>
+      <button class="Button" mat-fab (click)="logIn()">Login</button>
 
     </form>
   </div>
