update map component (style, stepper, stops);

--- a/src/app/components/maps/maps.component.html
+++ b/src/app/components/maps/maps.component.html
@@ -1,40 +1,68 @@
 <div id="wrapper">
-  Зупинка : <strong>{{markerOneName}}</strong> Координати:{{markerOneLat}} - {{markerOneLng}} <br/>
-  Зупинка : <strong>{{markerTwoName}}</strong> Координати:{{markerTwoLat}} - {{markerTwoLng}}
-
-  <agm-map [latitude]="latStatic"
-           [longitude]="lngStatic"
-           [zoom]="zoom"
-  >
-    <agm-direction *ngIf="direction"
-                   [origin]="direction.origin" [destination]="direction.destination"
-                   [renderOptions]="renderOptions"
-                   [markerOptions]="markerOptions"
-                   [travelMode]="travelMode"
-                   [waypoints]="waypoints"
-
+  <mat-vertical-stepper #stepper>
+    <mat-step [stepControl]="firstFormGroup" label="Step 1">
+      <ng-template matStepLabel>{{firstStopMarker.name ? firstStopMarker.name : "Choose a stop" | translate }}</ng-template>
+      <div>
+        <button mat-button matStepperNext>{{'Next' | translate}}</button>
+        <button mat-button (click)="clearStopFirst()">
+          {{'Clear'| translate}}
+        </button>
+      </div>
+    </mat-step>
+    <mat-step [stepControl]="firstFormGroup" label="Step 2">
+      <ng-template matStepLabel>{{secondStopMarker.name ? secondStopMarker.name : "Choose a stop" | translate }}</ng-template>
+      <div>
+        <button mat-button matStepperPrevious>{{'Back' | translate}}</button>
+        <button mat-button matStepperNext>{{'Next' | translate}}</button>
+        <button mat-button (click)="clearStopSecond()">
+          {{'Clear'| translate}}
+        </button>
+      </div>
+    </mat-step>
+    <mat-step [stepControl]="firstFormGroup" label="Step 3">
+      <ng-template matStepLabel>{{(secondStopMarker.name && firstStopMarker.name) ? firstStopMarker.name +" - " +  secondStopMarker.name : "Choose a stop" | translate }}</ng-template>
+      <div>
+        <div class="stop-list" *ngFor="let s of stopList">
+          {{s.name}}
+        </div>
+        <button mat-button matStepperNext>Make Feedback</button>
+        <button mat-button matStepperPrevious>{{'Back' | translate}}</button>
+        <button mat-button (click)="stepper.reset(); clearStopSecond(); clearStopFirst()">Reset</button>
+      </div>
+    </mat-step>
+  </mat-vertical-stepper>
+  <div id="map-wrapper">
+    <agm-map [latitude]="latStatic"
+             [longitude]="lngStatic"
+             [zoom]="zoom"
+             [styles]="styles"
     >
-    </agm-direction>
-    [waypoints]="waypoints"
-    <agm-marker *ngFor="let m of markers"
-    (markerClick)="clickedMarker(m)"
-    [latitude]="m.lat"
-    [longitude]="m.lng"
-    [markerDraggable]="m.draggable"
-    [iconUrl]="icon"
-    >
-    <agm-info-window>
-    {{m.name}} <br/>
-    {{m.lat}} <br/>
-    {{m.lng}}
-    </agm-info-window>
+      <agm-direction *ngIf="direction"
+                     [origin]="direction.origin" [destination]="direction.destination"
+                     [renderOptions]="renderOptions"
+                     [markerOptions]="markerOptions"
+                     [travelMode]="travelMode"
+                     [waypoints]="waypoints"
+      >
+      </agm-direction>
+      <agm-marker *ngFor="let m of markers"
+                  (markerClick)="clickedMarker(m)"
+                  [latitude]="m.lat"
+                  [longitude]="m.lng"
+                  [markerDraggable]="m.draggable"
+                  [iconUrl]="icon"
+      >
+        <agm-info-window [disableAutoPan]="true">
+          <strong>{{m.name}}</strong>
+        </agm-info-window>
 
-    </agm-marker>
-  </agm-map>
+      </agm-marker>
+    </agm-map>
+  </div>
   <button mat-button (click)="setDirectionAndRefresh('forward')">
-    Forward
+    {{'Forward'| translate}}
   </button>
   <button mat-button (click)="setDirectionAndRefresh('backward')">
-    Backward
+    {{'Backward'| translate}}
   </button>
 </div>
