--- a/src/app/components/maps/maps.component.css
+++ b/src/app/components/maps/maps.component.css
@@ -1,11 +1,32 @@
 agm-map {
-  height: 600px;
-  width: 900px;
-  box-shadow: 1px 5px 6px 2px rgba(217, 214, 217, 1);
+  height: 400px;
+  width: auto;
+}
+#map-wrapper{
+  margin: 5px;
+  box-shadow: 0px 0px 10px 1px rgba(166, 167, 168,1);
+
 }
 #wrapper{
   position: absolute;
-  top: 300px;
-  right: 400px;
+  top: 15%;
+  left: 50%;
+  width: 1000px;
+  transform: translateX(-50%);
+}
+button{
+  border: darkgrey solid 1px;
+  border-radius: 4px;
+  margin: 8px 2px;
+}
+.stop-list{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  letter-spacing: 0px;
+  word-spacing: 2.4px;
+  color: #A8A8A8;
+  font-weight: 400;
+  text-decoration: none solid rgb(68, 68, 68);
+  font-style: italic;
 }
 
