--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -43,12 +43,12 @@ a:active {
 
 .criteriaButton {
   position: relative;
-  left: 400px;
+  left: 550px;
 }
 
 .NewUser {
   position: relative;
-  left: 500px;
+  left: 600px;
 }
 
 .container {
@@ -62,6 +62,38 @@ a:active {
 
 .lang {
   margin: 0 0 0 8px;
+}
+
+.Search{  
+  
+  position: relative;
+  left: 400px;
+  font-size: 10.5px;
+  font-family: sans-serif;
+  color: darkgray;
+  font-weight: bold;
+  padding-bottom: 2px;
+}
+input{
+font-size: 14px;
+line-height: 29px;
+letter-spacing: .3px;
+font-weight: 400;
+color: #333;
+    border: 1px solid  rgb(168, 166, 170);
+    border-radius: 100px;
+    background-color: #ffffff;
+    padding: 9px 16px;
+    margin: 1px 0 0 8px;
+    width: 180px;
+    height: 100%;
+    /* -webkit-appearance: none; */
+}
+:focus {
+  outline: -webkit-focus-ring-color auto 0;
+  outline-color: -webkit-focus-ring-color;
+  outline-style: auto;
+  outline-width: 0;
 }
 
 
