--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -3,7 +3,11 @@
   <div class="transport"><a [routerLink]="['/main']" [ngStyle]="{'color' : 'black'}">Transport</a>
     <a class="lang" (click)="switchLanguage('ua')"><img src="../../../assets/img/ukraine.png"></a>
     <a class="lang" (click)="switchLanguage('en')"><img src="../../../assets/img/united-kingdom.png"></a></div>
-  <div class="criteriaButton">
+  
+    <div class="Search" *ngIf="isHomeRouteActivated()">
+        <input #search aria-label="search" placeholder="Search" (keyup.enter)="onEnter(search.value)">
+    </div>
+    <div class="criteriaButton">
     <a [routerLink]="['/feedback-criteria']">
       <button mat-stroked-button type="submit">{{ 'Feedback'| translate}}</button>
     </a>
@@ -13,4 +17,5 @@
       <button mat-stroked-button type="submit">{{'User' | translate}}</button>
     </a>
   </div>
+  
 </mat-toolbar>
