change styles, try to update diagram

--- a/src/app/components/transit/stops-grid.component.html
+++ b/src/app/components/transit/stops-grid.component.html
@@ -1,31 +1,33 @@
 <div class="demo-grid-list">
   <mat-tab-group>
-    <mat-tab label="FORWARD DIRECTION:">
-      <mat-grid-list *ngIf="stopArray.length" [cols]="stopArray.length" rowHeight="100px">
+    <mat-tab [label]="'Forward direction' | translate">
+      <mat-grid-list *ngIf="stopArray.length" [cols]="stopArray.length" rowHeight="100px" class="grid-list">
         <mat-grid-tile
           *ngFor="let i=index; let tile of stopArray" class="tile" >
-  <span *ngIf="stopArray.length">
-           <label [for]="tile.id">{{tile.street}}<br>
-          <input type="checkbox" [(ngModel)]="checkedItems[i]" [id]="tile.id" (change)='selectStops()'></label>
-  </span>
+          <label [for]="tile.id"><div>{{tile.street}}</div>
+            <input type="checkbox" [(ngModel)]="checkedItems[i]" [id]="tile.id" (change)='selectStops()'>
+            <img src="../../../assets/img/list.jpg">
+          </label>
         </mat-grid-tile>
       </mat-grid-list>
     </mat-tab>
-    <mat-tab label="BACKWARD DIRECTION:">
+    <mat-tab [label]="'Backward direction' | translate">
       <mat-grid-list *ngIf="stopArray.length" [cols]="stopArray.length" rowHeight="100px">
         <mat-grid-tile
           *ngFor="let i=index; let tile of stopArray" class="tile" >
-  <span *ngIf="stopArray.length">
-           <label [for]="tile.id"><div>{{tile.street}}</div>
-          <input type="checkbox" [(ngModel)]="checkedItems[i]" [id]="tile.id" (change)='selectStops()'></label>
-  </span>
+            <label [for]="tile.id"><div>{{tile.street}}</div>
+              <input type="checkbox" [(ngModel)]="checkedItems[i]" [id]="tile.id" (change)='selectStops()'>
+              <img src="../../../assets/img/list.jpg">
+            </label>
         </mat-grid-tile>
       </mat-grid-list>
     </mat-tab>
   </mat-tab-group>
-  <app-average-rate [id]="idTransit"></app-average-rate>
-      <app-busy-stops-diagram [id]="idTransit"></app-busy-stops-diagram>
-      <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
-      <app-raiting-diagram [id]="idTransit"></app-raiting-diagram>
+</div>
+<div >
+  <!--<app-average-rate [id]="idTransit"></app-average-rate>-->
+      <!--<app-busy-stops-diagram [id]="idTransit" [stopList]="selectedStops"></app-busy-stops-diagram>-->
+      <!--<app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>-->
+      <!--<app-raiting-diagram [id]="idTransit"></app-raiting-diagram>-->
 </div>
 
