--- a/src/app/components/transit/stops-grid.component.css
+++ b/src/app/components/transit/stops-grid.component.css
@@ -1,6 +1,5 @@
 .demo-grid-list {
-  width: auto;
-  margin: 100px 100px;
+  margin: 150px 150px;
 }
 
 .mat-card {
@@ -13,7 +12,8 @@ p {
 
 .demo-basic-list .mat-grid-tile {
   background: rgba(0, 0, 0, 0.32);
-  text-align: start;
+  text-align: center;
+
 }
 
 .example-radio-group {
@@ -30,9 +30,7 @@ p {
 }
 
 mat-tab-group {
-  position: relative;
-  right: 50px;
-  width: 550px;
+  width: auto;
   height: auto;
 }
 
@@ -41,3 +39,8 @@ mat-tab-group {
   font-size: 14px;
 
 }
+
+.grid-list {
+  min-width: 900px;
+}
+
