change styles, try to update diagram

--- a/src/app/components/transit/stops-grid.component.html
+++ b/src/app/components/transit/stops-grid.component.html
@@ -25,9 +25,12 @@
   </mat-tab-group>
 </div>
 <div >
-  <!--<app-average-rate [id]="idTransit"></app-average-rate>-->
-      <!--<app-busy-stops-diagram [id]="idTransit" [stopList]="selectedStops"></app-busy-stops-diagram>-->
-      <!--<app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>-->
-      <!--<app-raiting-diagram [id]="idTransit"></app-raiting-diagram>-->
+  <app-average-rate [id]="idTransit"></app-average-rate>
+  <app-raiting-diagram [id]="idTransit"></app-raiting-diagram>
+  <app-busy-stops-diagram [id]="idTransit"></app-busy-stops-diagram>
+  <app-busy-hours-diagram [id]="idTransit"></app-busy-hours-diagram>
 </div>
+<app-back-to-previous-page-btn></app-back-to-previous-page-btn>
+
+
 
