--- a/src/app/components/transits/transits.component.html
+++ b/src/app/components/transits/transits.component.html
@@ -3,22 +3,22 @@
 
     <ng-container matColumnDef="id">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Id</mat-header-cell>
-      <mat-cell *matCellDef="let transit"> {{ transit.id }} </mat-cell>
+      <mat-cell *matCellDef="let transit"> {{ transit.id }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Name</mat-header-cell>
-      <mat-cell *matCellDef="let transit"> {{ transit.name }} </mat-cell>
+      <mat-cell *matCellDef="let transit"> {{ transit.name }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="categoryId">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Category Id</mat-header-cell>
-      <mat-cell *matCellDef="let transit"> {{ transit.categoryId }} </mat-cell>
+      <mat-cell *matCellDef="let transit"> {{ transit.categoryId }}</mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns; let transit;"
-             [routerLink]="['/show-transit-scheme', transit.id, transit.categoryId ]"></mat-row>
+             [routerLink]="['/show-transit-scheme', transit.id, transit.categoryId , transit.name]"></mat-row>
   </table>
 </div>
 <!--<div class="AddTransit">-->
