--- a/src/app/components/feedback-criteria/add-question/add-question.component.html
+++ b/src/app/components/feedback-criteria/add-question/add-question.component.html
@@ -4,10 +4,14 @@
     <mat-label>Name</mat-label>
     <input matInput placeholder="name" [(ngModel)]="question.name" id="name" name="name">
   </mat-form-field>
+  <mat-form-field appearance="outline">
+      <mat-label>Weight</mat-label>
+      <input [readonly]="isReadOnly" matInput placeholder="weight" [(ngModel)]="question.weight" id="name" name="weight">
+      <mat-hint align="end">Only RATING can have weight</mat-hint>
+    </mat-form-field>
   <div class="button">
-      <button class="mat-raised-button"(click)="close(question.name)">Close</button>
-      <button class="mat-raised-button mat-primary"(click)="add(question.name)">Ok</button> 
- 
+      <button class="mat-raised-button"(click)="close(question.name, question.weight)">Close</button>
+      <button class="mat-raised-button mat-primary"(click)="add(question.name, question.weight)">Ok</button>  
     </div>
 
   
