--- a/src/app/components/transits/transits.component.html
+++ b/src/app/components/transits/transits.component.html
@@ -18,7 +18,8 @@
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns; let transit;"
-             [routerLink]="['/show-transit-scheme', transit.categoryId, transit.id]"></mat-row>
+             [routerLink]="['/show-transit-scheme', transit.categoryId,
+             transit.id, transit.name]"></mat-row>
   </table>
 </div>
 <!--<div class="AddTransit">-->
