--- a/src/app/components/transit/stops-grid.component.css
+++ b/src/app/components/transit/stops-grid.component.css
@@ -4,45 +4,25 @@
   margin: 100px 100px;
 }
 
-.mat-card {
-  margin: 16px 0;
-}
-
 p {
   margin: 16px;
 }
 
-.demo-basic-list .mat-grid-tile {
+.mat-grid-tile-class {
   background: rgba(0, 0, 0, 0.32);
   text-align: center;
-
-}
-
-.example-radio-group {
-  display: inline-flex;
-  flex-direction: column;
-}
-
-.example-radio-button {
-  margin: 5px;
+  text-align:center;
+  font-size: 14px;
+  max-width: 40px;
 }
 
 .example-selected-value {
   margin: 15px 0;
 }
 
-mat-tab-group {
-  width: 1200px;
-  height: auto;
-}
 
-.tile{
-  text-align:center;
-  font-size: 14px;
-
-}
 
 .grid-list {
-  min-width: 1200px;
+  width: 1200px;
 }
 
