--- a/src/app/components/transits/transits.component.html
+++ b/src/app/components/transits/transits.component.html
@@ -1,26 +1,36 @@
-<div class="transitTable">
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<div class="mat-elevation-z8">
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  </mat-form-field>
+  <mat-table [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Id</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
       <mat-cell *matCellDef="let transit"> {{ transit.id }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Name</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
       <mat-cell *matCellDef="let transit"> {{ transit.name }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="categoryId">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Category Id</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Category Id </mat-header-cell>
       <mat-cell *matCellDef="let transit"> {{ transit.categoryId }} </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="routeName">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Route </mat-header-cell>
+      <mat-cell *matCellDef="let transit"> {{ transit.routeName }} </mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns; let transit;"
              [routerLink]="['/show-transit-scheme', transit.categoryId,
              transit.id, transit.name]"></mat-row>
-  </table>
+  </mat-table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
 <!--<div class="AddTransit">-->
 <!--<h2 class="mat-h2">Add transit</h2>-->
