--- a/src/app/components/transit/components/raiting-diagram/raiting-diagram.component.css
+++ b/src/app/components/transit/components/raiting-diagram/raiting-diagram.component.css
@@ -1,7 +1,7 @@
 .container {
   position: absolute;
-  top: 50px;
-  left: 0px;
+  top: 25%;
+  left: 100px;
   width: 300px;
   margin: 100px auto;
 }
