Fix add-feedback-criteria html

--- a/src/app/components/feedback-criteria/add-feedback-criteria/add-feedback-criteria.component.html
+++ b/src/app/components/feedback-criteria/add-feedback-criteria/add-feedback-criteria.component.html
@@ -1,35 +1,20 @@
-<div class="form ">
-  <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <span>{{ 'FeedbackInfo' | translate}} {{transitName}}</span>
-    </mat-toolbar-row>
-  </mat-toolbar>
-  <div class="addfeedback ">
-    <div class="showFeedbacks" *ngFor="let feedback of feedbacks ">
-      <div class="showQuestions" *ngFor="let question of feedback.questions">
-        <div class="question">
-          {{question}}
-        </div>
-
-        <div *ngIf="feedback.type == 'RATING'">
-          <mat-form-field class="answer">
-            <input matInput type="text" min="0" max="10" placeholder="answer" [(ngModel)]="feedback.answer"/>
-            <mat-hint align="end">0/ 10</mat-hint>
-          </mat-form-field>
-        </div>
-
-        <div *ngIf="feedback.type == 'ACCEPTER'">
-          <div class="radio">
-            <label for="answer" *ngFor="let answer of checkBoxAnswers ">
-              <input type="radio" [value]="answer" [(ngModel)]="feedback.answer">{{ answer | lowercase | translate }}
-            </label>
-          </div>
-        </div>
-      </div>
-    </div>
+<div class="addfeedbackcriteria">
+  <mat-form-field appearance="standard">
+    <mat-select placeholder="Type" [(ngModel)]="feedbackCriteria.type" name="type">
+      <mat-option *ngFor="let enumType of enumTypes" [value]="enumType" (click) = "ifRatingType(feedbackCriteria.type)">
+        {{ enumType }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <div class="questionadd" *ngIf="questions">
+    <mat-list *ngFor="let question of questions">
+      <mat-list-item >Question: {{question.name}}</mat-list-item>
+      <mat-list-item *ngIf="question.weight">Weight: {{question.weight}}</mat-list-item>
+      <mat-divider></mat-divider>
+    </mat-list>
   </div>
-  <div class="buttons">
-    <button mat-raised-button color="primary" (click)="saveAllFeedback()">{{ 'Save' | translate}}</button>
-    <button mat-raised-button (click)="close()">{{ 'Close' | translate}}</button>
-  </div>
+  <div class="button">
+    <button mat-raised-button (click)="openDialog()">Add Questions</button></div>
+  <button mat-stroked-button (click) = "addFeedbackCriteria()" > SAVE </button>
+
 </div>
